--- a/index.html
+++ b/index.html
@@ -7,21 +7,62 @@
     <meta name="description" content="AI-powered voice notes and meeting assistant that records, transcribes, summarizes, and organizes everything you say—so you never miss a detail.">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🍌</text></svg>">
+    <link rel="icon" type="image/png" href="BananaNoteLogo.png">
+    <link rel="apple-touch-icon" href="BananaNoteLogo.png">
+    <meta property="og:image" content="BananaNoteLogo.png">
+    <meta property="og:title" content="Banananote - Your Memory, Amplified">
+    <meta property="og:description" content="AI-powered voice notes and meeting assistant that records, transcribes, summarizes, and organizes everything you say—so you never miss a detail.">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:image" content="BananaNoteLogo.png">
+    
+    <!-- Structured Data for Search Engines -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "Banananote",
+      "url": "https://banananote.com",
+      "logo": "https://banananote.com/BananaNoteLogo.png",
+      "description": "AI-powered voice notes and meeting assistant that records, transcribes, summarizes, and organizes everything you say—so you never miss a detail.",
+      "sameAs": [
+        "https://apps.apple.com/us/app/banananote-ai-note-taker/id6749599834"
+      ]
+    }
+    </script>
+    
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "MobileApplication",
+      "name": "Banananote",
+      "description": "AI-powered voice notes and meeting assistant",
+      "operatingSystem": "iOS",
+      "applicationCategory": "ProductivityApplication",
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "USD"
+      },
+      "downloadUrl": "https://apps.apple.com/us/app/banananote-ai-note-taker/id6749599834"
+    }
+    </script>
 </head>
 <body>
     <!-- Header -->
     <header class="header">
         <nav class="nav">
             <div class="nav-brand">
-                <span class="logo">🍌</span>
+                <img src="BananaNoteLogo.png" alt="Banananote Logo" class="logo-img">
                 <span class="brand-name">Banananote</span>
             </div>
             <div class="nav-menu">
                 <a href="#features" class="nav-link">Features</a>
                 <a href="#about" class="nav-link">About</a>
                 <a href="contact.html" class="nav-link">Contact</a>
-                <a href="#download" class="btn btn-primary">Download</a>
+                <a href="https://apps.apple.com/us/app/banananote-ai-note-taker/id6749599834" class="app-store-button app-store-button-small" target="_blank" rel="noopener">
+                    <img src="https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg" alt="Download on the App Store">
+                </a>
             </div>
             <div class="mobile-menu-toggle">
                 <span></span>
@@ -45,13 +86,9 @@
                     AI-powered voice notes and meeting assistant that records, transcribes, summarizes, and organizes everything you say—so you never miss a detail.
                 </p>
                 <div class="hero-cta">
-                    <a href="#download" class="btn btn-primary btn-large">
-                        <span>Get Started Free</span>
-                        <svg width="20" height="20" viewBox="0 0 20 20" fill="none">
-                            <path d="M4.16667 10H15.8333M15.8333 10L10.8333 5M15.8333 10L10.8333 15" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                        </svg>
+                    <a href="https://apps.apple.com/us/app/banananote-ai-note-taker/id6749599834" class="app-store-button app-store-button-large" target="_blank" rel="noopener">
+                        <img src="https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg" alt="Download on the App Store">
                     </a>
-
                 </div>
 
             </div>
@@ -61,7 +98,7 @@
                         <div class="phone-screen">
                             <div class="app-interface">
                                 <div class="app-header">
-                                    <span class="app-logo">🍌</span>
+                                    <img src="BananaNoteLogo.png" alt="Banananote Logo" class="logo-img-small">
                                     <span class="app-title">Banananote</span>
                                 </div>
                                 <div class="recording-interface">
@@ -193,14 +230,8 @@
                 <h2 class="download-title">Ready to Amplify Your Memory?</h2>
                 <p class="download-subtitle">Join thousands of professionals, students, and creators who trust Banananote with their most important thoughts.</p>
                 <div class="download-buttons">
-                    <a href="#" class="ios-download-button">
-                        <svg width="135" height="40" viewBox="0 0 135 40" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <rect width="135" height="40" rx="6" fill="#000000"/>
-                            <path d="M25.769 20.3013C25.8251 18.9456 26.2949 17.6363 27.1088 16.5542C27.9227 15.4722 29.0413 14.6669 30.3253 14.2363C29.6587 13.2747 28.7599 12.4928 27.7115 11.9578C26.6631 11.4228 25.4955 11.1501 24.3123 11.1628C21.9473 10.9242 19.6398 12.554 18.4298 12.554C17.1933 12.554 15.3078 11.1888 13.3253 11.2268C11.9296 11.2661 10.5803 11.7145 9.44831 12.5163C8.31632 13.318 7.44654 14.4394 6.94731 15.7353C4.25565 21.2458 6.25231 29.2458 8.85565 33.6163C10.1556 35.7658 11.6816 38.1433 13.6641 38.0673C15.6201 37.9848 16.3491 36.7848 18.6726 36.7848C20.9701 36.7848 21.6726 38.0673 23.6816 38.0223C25.7436 37.9848 27.0691 35.8673 28.3431 33.7043C29.2678 32.1855 29.9527 30.5403 30.3776 28.8223C28.8765 28.2575 27.5883 27.2235 26.6887 25.8709C25.7891 24.5184 25.3192 22.9169 25.3448 21.2798C25.3448 20.9533 25.5423 20.6268 25.769 20.3013Z" fill="white"/>
-                            <path d="M22.8074 9.59079C23.9654 8.23829 24.5724 6.47579 24.4984 4.66829C22.6871 4.80329 20.9966 5.58329 19.8644 6.84329C19.3171 7.45454 18.8888 8.16734 18.6019 8.94329C18.315 9.71924 18.1742 10.5424 18.1869 11.3698C19.0229 11.3773 19.8494 11.1798 20.5889 10.7933C21.3284 10.4068 21.9567 9.84329 22.4159 9.14829L22.8074 9.59079Z" fill="white"/>
-                            <text x="42" y="13" font-family="-apple-system, BlinkMacSystemFont, 'SF Pro Display'" font-size="9" fill="white">Download on the</text>
-                            <text x="42" y="28" font-family="-apple-system, BlinkMacSystemFont, 'SF Pro Display'" font-size="17" font-weight="500" fill="white">App Store</text>
-                        </svg>
+                    <a href="https://apps.apple.com/us/app/banananote-ai-note-taker/id6749599834" class="app-store-button" target="_blank" rel="noopener">
+                        <img src="https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg" alt="Download on the App Store">
                     </a>
                 </div>
                 <div class="download-info">
@@ -227,7 +258,7 @@
             <div class="footer-content">
                 <div class="footer-brand">
                     <div class="footer-logo">
-                        <span class="logo">🍌</span>
+                        <img src="BananaNoteLogo.png" alt="Banananote Logo" class="logo-img">
                         <span class="brand-name">Banananote</span>
                     </div>
                     <p class="footer-tagline">Your memory, amplified.</p>
