--- a/privacy.html
+++ b/privacy.html
@@ -7,7 +7,14 @@
     <meta name="description" content="Privacy Policy for Banananote - Learn how we protect and handle your personal information.">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🍌</text></svg>">
+    <link rel="icon" type="image/png" href="BananaNoteLogo.png">
+    <link rel="apple-touch-icon" href="BananaNoteLogo.png">
+    <meta property="og:image" content="BananaNoteLogo.png">
+    <meta property="og:title" content="Privacy Policy - Banananote">
+    <meta property="og:description" content="Privacy Policy for Banananote - Learn how we protect and handle your personal information.">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:image" content="BananaNoteLogo.png">
 </head>
 <body>
     <!-- Header -->
@@ -15,7 +22,7 @@
         <nav class="nav">
             <div class="nav-brand">
                 <a href="index.html" style="text-decoration: none; color: inherit; display: flex; align-items: center; gap: 0.5rem;">
-                    <span class="logo">🍌</span>
+                    <img src="BananaNoteLogo.png" alt="Banananote Logo" class="logo-img">
                     <span class="brand-name">Banananote</span>
                 </a>
             </div>
@@ -23,7 +30,9 @@
                 <a href="index.html#features" class="nav-link">Features</a>
                 <a href="index.html#about" class="nav-link">About</a>
                 <a href="contact.html" class="nav-link">Contact</a>
-                <a href="index.html#download" class="btn btn-primary">Download</a>
+                <a href="https://apps.apple.com/us/app/banananote-ai-note-taker/id6749599834" class="app-store-button app-store-button-small" target="_blank" rel="noopener">
+                    <img src="https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg" alt="Download on the App Store">
+                </a>
             </div>
             <div class="mobile-menu-toggle">
                 <span></span>
@@ -248,7 +257,7 @@
             <div class="footer-content">
                 <div class="footer-brand">
                     <div class="footer-logo">
-                        <span class="logo">🍌</span>
+                        <img src="BananaNoteLogo.png" alt="Banananote Logo" class="logo-img">
                         <span class="brand-name">Banananote</span>
                     </div>
                     <p class="footer-tagline">Your memory, amplified.</p>
